Fixed the scroll weirdness on iOS

--- a/lapsa.css
+++ b/lapsa.css
@@ -15,22 +15,12 @@ body
 
 #lapsa-slide-container
 {
-	/*
-	display: flex;
-	flex-direction: column;
-	
-	align-items: center;
-	justify-content: center;
-	*/
-	
 	position: relative;
 	
 	width: 100vw;
 	margin: 0 auto;
 	
 	transform: translateY(0) scale(1);
-	
-	/*overflow-y: hidden;*/
 }
 
 #lapsa-slide-container .slide
